tutorials/en/foundation/6.3/android-tutorials.md
---
layout: tutorial
title: Native Android Development 6.3
---
### Setting up your development environment

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/setting-up-your-development-environment/setting-mobilefirst-development-environment/">Setting up your MobileFirst development environment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/setting-up-your-development-environment/setting-android-development-environment/">Setting up your Android development environment</a>

### Hello World

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/hello-world/creating-first-native-android-mobilefirst-application/">Creating your first native Android application</a>

### Server-side development
<p><i>Multiple tutorials within</i></p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/server-side-development/">Server-side development tutorials</a>

### Advanced client-side development

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/advanced-client-side-development/using-cli-create-build-manage-project-artifacts/">Using CLI to create, build, and manage Worklight project artifacts</a>

### Working Offline

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/working-offline/jsonstore/jsonstore-java-api/">JSONStore - Java API</a>

### Notifications

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/notifications/push-notification-native-android-applications/">Push notifications in native Android applications</a>

### Authentication and security

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/authentication-concepts/">Authentication concepts</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/form-based-authentication/">Form-based authentication - server configuration</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/form-based-authentication/form-based-authentication-native-android-applications/">Form-based authentication - client implementation</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/adapter-based-authentication/">Adapter-based authentication - server configuration</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/adapter-based-authentication/adapter-based-authentication-native-android-applications/">Adapter-based authentication - client implementation</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/custom-authenticator-login-module/">Custom authenticator and login module - server configuration</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/custom-authenticator-login-module/custom-authenticator-login-module-native-android-applications/">Custom authenticator and login module - client implementation</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/authentication-security/application-authenticity-protection-native-android/">Application Authenticity Protection in Native Android applications</a>

### Advanced topics

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/advanced-topics/location-services-native-android-applications/">Location services in native Android</a>

### Moving to Production
<p><i>Multiple tutorials within</i></p>

* <a href="{{site.baseurl}}/tutorials/en/foundation/6.3/moving-production/">Moving to production</a>
