tutorials/en/foundation/7.0/android-tutorials.md
---
layout: tutorial
title: Native Android Development
---
<br>
### Quick Start

#### Recommended
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/quick-start/android-quick-start/">End-to-end flow demonstration</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/setting-up-your-development-environment/">Setting up your development environment</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/setting-up-your-development-environment/setting-mobilefirst-development-environment/">Setting up your MobileFirst development environment</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/setting-up-your-development-environment/setting-android-development-environment/">Setting up your Android development environment</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/hello-world/">Hello World</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/hello-world/creating-first-native-android-mobilefirst-application/">Creating your first native Android application</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/hello-world/connecting-to-the-mobilefirst-server/">Connecting to the MobileFirst Server</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/hello-world/mobilefirst-console/">Introduction to MobileFirst Console</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/">Server-side development</a>



* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/adapter-framework-overview/">Adapters overview</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/js-http-adapter/">JavaScript HTTP Adapter</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/js-sql-adapter/">JavaScript SQL Adapter</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/js-cast-iron-adapter/">JavaScript Cast Iron Adapter</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/js-jms-adapter/">JavaScript JMS Adapter</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/java-adapter/">Java Adapter</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/invoking-adapter-procedures-native-android-applications/">Invoking adapter procedures from native Android applications</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/using-java-adapters/">Using Java in JavaScript adapters</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/server-side-development/debugging-adapters/">Debugging adapters</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-client-side-development/">Advanced client-side development</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-client-side-development/using-cli-create-build-manage-project-artifacts/">Using CLI to create, build, and manage MobileFirst project artifacts</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-client-side-development/remote-controlled-client-side-log-collection/">Remote-controlled Client-side log collection</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/data/">Data</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/data/jsonstore/jsonstore-java-api/">JSONStore - Java API</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-topics/cloudant-nosql-db-api/">Working with Cloudant NoSQL DB API</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/notifications/">Notifications</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/notifications/push-notification-native-android-applications/">Push notifications in native Android applications</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/">Authentication and security</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/authentication-concepts/">Authentication concepts</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/form-based-authentication/">Form-based authentication - server configuration</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/form-based-authentication/form-based-authentication-native-android-applications/">Form-based authentication - client implementation</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/adapter-based-authentication/">Adapter-based authentication - server configuration</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/adapter-based-authentication/adapter-based-authentication-native-android-applications/">Adapter-based authentication - client implementation</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/custom-authenticator-login-module/">Custom authenticator and login module - server configuration</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/custom-authenticator-login-module/custom-authenticator-login-module-native-android-applications/">Custom authenticator and login module - client implementation</a>
* <a href="http://developer.ibm.com{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/application-authenticity-protection/application-authenticity-protection-native-android/">Application Authenticity Protection in Native Android applications</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/authentication-security/using-mobilefirst-server-authenticate-external-resources/">Using the MobileFirst Server to authenticate external resources</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-topics/">Advanced topics</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-topics/location-services-native-android-applications/">Location services in native Android</a>
* <a href="http://developer.ibm.com{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-topics/working-with-beacons/">Working with Beacons</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/advanced-topics/working-bluxmix-data-api/">Working with Bluemix Data API</a>

### <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/moving-production/">Moving to production</a>

* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/moving-production/moving-development-environment-stand-alone-qa-production-servers/">Moving from development environment to stand-alone QA and production servers</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/moving-production/operational-analytics/">Operational Analytics</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/moving-production/reports-analytics/">Reports and analytics</a>
* <a href="{{site.baseurl}}/tutorials/en/foundation/7.0/moving-production/distributing-mobile-applications-application-center/">Distributing mobile applications with Application Center</a>
